# Proyecto-final

./: .gitignore  README.md  implementation_plan.md  presentacion_comercial_aqd.md  project_overview.md  pyproject.toml  scrape_test.py  verify_api.py  wfs_debug.py
andalucia_quick_data/: __init__.py  api.py  cache.py  sima_scraper.py  visualizer.py  wfs_client.py
tests/: test_api.py  test_sima_scraper.py  test_wfs_client.py
